--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,80 @@
 .active a{
-	color: red;
+    color:#ff8929
+}
+active:nth-child(1) i{
+
+}
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+   position: relative;
+  min-height: 100%;
+}
+body {
+  /* Margin bottom by footer height */
+  margin-bottom: 60px;
+
+}
+.footer {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background: url(../images/foot_nav_bg.png) no-repeat center center;
+background-size: cover;
+}
+.footer .container{
+	position: fixed;
+	top: 0;
+}
+.nav{
+	width: 100%
+}
+.nav li{
+
+	width: 25%;
+	text-align: center;
+}
+.nav li a{
+		font-size:0.79rem; /* 80/75 */
+}
+.nav li i{
+    display: block;
+    background: url(../images/foot_icon.png) no-repeat center center;
+    display: block;
+    height: 29px;
+    width: 28px;
+    margin: 0 auto;
+}
+.nav li:nth-child(1) i{
+        background-position: -1px -32px;
+        width: 30px;
+}
+.nav li:nth-child(2) i{
+        background-position: -34px -32px;
+}
+.nav li:nth-child(3) i{
+        background-position: -64px -32px;
+}
+.nav li:nth-child(4) i{
+        background-position: -92px -32px;
+}
+.active1{
+    background-position: -1px 0px!important;
+}
+.active2{
+    background-position:  -34px 0px!important;
+}
+.active3{
+    background-position:-64px 0px !important;
+}
+.active4{
+    background-position:-90px 0px !important;
+}
+.navbar{
+	position: fixed;
+    width: 100%;
+    bottom: 0;
+    padding-bottom: 10px;
 }
